Fixes for the backend and the swagger
